--- a/app/03.Android basic.md
+++ b/app/03.Android basic.md
@@ -3,7 +3,7 @@
 https://zhuanlan.zhihu.com/p/556878750
 https://blog.csdn.net/hello_1995/article/details/120075342
 
-1、Activity和Fragment生命周期？值传递方式？
+1、Activity和Fragment生命周期？值传递方式？onNewIntent()的调用时机？
 - onCreate - onStart - onResume - onRestart - onStop - onDestroy
 - onAttach - onCreate - onCreateView - onActivityCreated - onResume - onRestart - onStop - 
   onDestroy - onDestroyView - onDetach
