--- a/app/01.Java basic.md
+++ b/app/01.Java basic.md
@@ -310,10 +310,22 @@ retrofit是如何获取泛型擦除后的泛型类型的？
   （5）初始化：对类变量进行赋值及执行静态代码块
 - 生命周期： 加载、连接、初始化、使用、和卸载。  
   
-2、什么是双亲委托？
-- 在加载一个类的过程中，ClassLoader首先会判断这个类的相关父类有没有被加载，如果父类没有加载则优先加载父类，如果没有父类，
+2、类加载器分类？什么是双亲委托？有什么好处？如何打破？
+- 分类：
+  （1）启动类加载器（bootstrap Classloader）
+  （2）扩展类加载器（extented classloader）
+  （3）应用类加载器（application classloader）
+  （4）自定义加载器（user-defined classloader）
+- 加载类时，挑选类加载器的一个机制。
+  在加载一个类的过程中，ClassLoader首先会判断这个类的相关父类有没有被加载，如果父类没有加载则优先加载父类，如果没有父类，
   则交给上层的ClassLoader去尝试加载，上层ClassLoader在其加载范围内没有找到该类，就又继续往上层传递，直至顶层的ClassLoader。
   如果顶层的ClassLoader也没有加载，则交给自己加载。
+- 好处？
+  （1）防止重复加载类
+  （2）安全，防止自定义同名类被加载。
+- 如何打破？
+  利用线程上下文加载器（thread context classloader）
+  
   
 3、对象的创建过程?对象如何分配内存？对象的内存模型？
 - 创建过程：
@@ -402,16 +414,16 @@ retrofit是如何获取泛型擦除后的泛型类型的？
     （3）如果任务队列满了，此时还未达到最大线程数，则启动一个非核心线程去执行
     （4）如果达到了最大线程数，则拒绝执行，会调用RejectedExecutionHandler通知开发者。
 - 线程池分类：
-    （1）FixedThreadPool 固定线程数的线程池，最大线程数等于核心线程数
-    （2）SingleThreadPool 单个线程的线程池
-    （3）CachedThreadPool 无界线程池，会根据需要新建线程的线程池，核心线程为0
-    （4）ScheduledThreadPool  核心线程数固定，非核心线程没有限制的线程池
+    （1）FixedThreadPool 固定线程数的线程池，最大线程数等于核心线程数  最大线程 ==  核心线程
+    （2）SingleThreadPool 单个线程的线程池                        最大线程 == 核心线程 == 1
+    （3）CachedThreadPool 无界线程池，会根据需要新建线程的线程池，核心线程为0 最大线程 = 1  核心线程= 0 
+    （4）ScheduledThreadPool  核心线程数固定，非核心线程没有限制的线程池 最大线程 == 最大  核心线程固定  非核心线程 无界
 - 拒绝策略：
     （1）
 
 5、synchronized的理解?volatile的理解?ReentrantLock是什么？
 - synchronized: 用于修饰方法、代码块，可以保证在同一时刻只能有一个线程能够访问该段代码。
-- volatile    : 是一种轻量级的锁，一般用于修饰变量，可以保证变量的可见性和原子性。
+- volatile    : 是一种轻量级的锁，一般用于修饰变量，可以保证变量的可见性和原子性。.
 - ReentrantLock:是一套互斥锁，相比synchronized提供有更高级的功能
     · 等待可中断，持有锁的线程长时间不释放锁，正在等待的线程可以放弃等待，可以避免出现死锁。
     · 公平锁，正在等待的线程，按照申请时间获得锁
@@ -494,11 +506,11 @@ retrofit是如何获取泛型擦除后的泛型类型的？
 - 服务器返回的  **响应报文**  中第一行为状态行，包含了状态码以及原因短语，用来告知客户端请求的结果。
 | 状态码 | 类别 | 原因短语 |
 | :---: | :---: | :---: |
-| 1XX | Informational（信息性状态码） | 接收的请求正在处理 |
-| 2XX | Success（成功状态码）         |   请求正常处理完毕 |
-| 3XX | Redirection（重定向状态码）      | 需要进行附加操作以完成请求 |
-| 4XX | Client Error（客户端错误状态码） | 服务器无法处理请求 |
-| 5XX | Server Error（服务器错误状态码） | 服务器处理请求出错 |
+| 1XX | Informational（信息性状态码）     | 接收的请求正在处理         |
+| 2XX | Success      （成功状态码）       | 请求正常处理完毕          |
+| 3XX | Redirection  （重定向状态码）     | 需要进行附加操作以完成请求  |
+| 4XX | Client Error （客户端错误状态码）  | 服务器无法处理请求        |
+| 5XX | Server Error （服务器错误状态码）  | 服务器处理请求出错        |
 
 7、短连接与长连接？什么是Keep-Alive模式？
 - 短连接：建立一个TCP连接，进行一次HTTP请求
