--- a/app/03.Android basic.md
+++ b/app/03.Android basic.md
@@ -107,7 +107,12 @@ https://blog.csdn.net/hello_1995/article/details/120075342
 - ViewModel
 - Data
 
-3、安全相关的？
-4、组件化相关？
-6、对rxjava的使用和理解
+8、ActivityThread类
+
+9、IPC通信机制
+
+10、文件编译、转换阶段和过程、插件的编译原理
+
+11、注解处理器的工作原理？
+
 
