--- a/app/01.Java basic.md
+++ b/app/01.Java basic.md
@@ -79,11 +79,18 @@ retrofit是如何获取泛型擦除后的泛型类型的？
 - 注解：是Java中的一中元数据，可以添加在类、方法或者变量上。
 - 注解分类：
     按属性：· 标准注解：@overwrite 之类的java自带
-           · 元注解：@Retention @Target @Inherited @Documented 用于自定义注解
+           · 元注解：@Retention @Target @Inherited @Documented @Repeatable用于自定义注解
            · 自定义注解：利用元注解定义的
-   按运行阶段：
+    按运行阶段：
             · 编译时注解
             · 运行时注解
+- 注解保留：@Retention 的属性value是一个RetentionPolicy枚举值
+    · source  注解只会保留在源文件，编译时会被遗弃
+    · class   注解会保留在编译后的class文件中，当class加载后会遗弃注解
+    · runtime 注解不仅保留在class文件中，还会保留到虚拟机运行时一直存在
+  分别对应  源文件  .class文件   内存中的字节码
+- 注解处理器：
+    
    
 7、== 、 equals 、hashcode 区别？Java 中深拷贝与浅拷贝的区别？实现方式？
 - 区别：
@@ -543,24 +550,25 @@ retrofit是如何获取泛型擦除后的泛型类型的？
 - UDP特点：
   · 面向无连接
   · 每个数据报文大小限制在64k以内
-  · 不可靠协议
+  · 不可靠协议                            
   · 速度快、效率高
 - Http请求是TCP，DatagramSocket是UDP
   
 10、Cookie、Session、Token之间的区别？作用是啥？
-- Cookie:是存储在浏览器目录中的文本文件，存储一些少量的用户信息。
+- Cookie :是存储在浏览器目录中的文本文件，存储一些少量的用户信息。
 - Session:是客户端和服务端建立连接时添加的标志，最后会转化成一个Cookie发送给客户端。对HTTP请求进行持久化的存储，使得多次请求有相同的标识。
-- Token:是用户身份验证方式，也可以称为令牌。主要用于用户的身份验证。
+- Token  :是用户身份验证方式，也可以称为令牌。主要用于用户的身份验证。
       
 11、网络模型
 - 网络模型一般是指OSI（Open System Interconnection开放系统互连）七层参考模型
-  | OSI中的层 | 功能  | TCP/IP协议族  |
-  | -------- | --------|  -------- |
+  | OSI中的层        | 功能                               | TCP/IP协议族                                   |
+  | --------        | --------                          |  --------                                     |
   | 7 应用层      	| 文件传输，电子邮件，文件服务，虚拟终端	| TFTP，HTTP，SNMP，FTP，SMTP，DNS，Telnet 等等	|
   | 6 表示层      	| 数据格式化，代码转换，数据加密      	| 没有协议										|
   | 5 会话层 		| 解除或建立与别的接点的联系      		| 没有协议										|
   | 4 传输层 		| 提供端对端的接口      				| TCP，UDP										|
   | 3 网络层 		| 为数据包选择路由      				| IP，ICMP，OSPF，EIGRP，IGMP					|
-  | 2 数据链路层 	| 传输有地址的帧以及错误检测功能      	| SLIP，CSLIP，PPP，MTU							|
-  | 1 物理层 		| 以二进制数据形式在物理媒体上传输数据	| ISO2110，IEEE802，IEEE802.2					|
+  | 2 数据链路层 	    | 传输有地址的帧以及错误检测功能      	| SLIP，CSLIP，PPP，MTU							|
+  | 1 物理层 		| 以二进制数据形式在物理媒体上传输数据  	| ISO2110，IEEE802，IEEE802.2					|
 
+ 
