--- a/app/04.Android hot frame.md
+++ b/app/04.Android hot frame.md
@@ -1,29 +1,38 @@
 Android Hot Frame
-
+[经典问题汇总](https://blog.csdn.net/zhangjin1120/category_10950938_3.html)
+五问：定义是什么？为什么要使用？原理是什么？使用中出现的问题？如何解决？（优缺点）
 ### 一、Hilt、Dagger
 
-- 依赖注入
-- Hilt是Jetpack组件，是基于Dagger2封装的框架。
+- [简述依赖注入框架 Hilt 的实现原理](https://blog.csdn.net/xx23x/article/details/121636223)
+- 定义：Hilt是Jetpack组件，是基于Dagger2封装的框架。
   在一个类A中需要使用类B的实例，可不在A中对B进行实例化，而通过Hilt让B 自行进行传递相关构造函数中参数并且实例化后传入A中。
   对于类A，它并不需要关心B内部如何构造，B的构造方式发生变化后A类中也可以不做任何改变。
-- 为啥要使用？
-  （1）提高了代码的复用性
-  （2）减小了类之间的耦合度（A不用关心B如何构造、也不用持有B构造相关的参数的引用）
-- 如何生成代码？
-  Hilt使用注解处理器生成代码。对注解的处理发生在编译器将源文件转换成JAVA字节码期间。
-- 注解处理器？
-  注解处理器作用于源文件，在编译器编译期间会检查注解，并根据注解来执行不同的任务如代码检查、生成新文件。
-- 原理：Hilt会对注解的类生成一个hilt_xx的父类，在这个父类的onCreate中提供了变量初始化的入口，所有注解的变量都是从这里进行实例化的操作。
-  （1）入口阶段：通过注解@HiltAndroidApp对Application进行标记，创建了多个接口和抽象类，生成一个hilt_xx的Application父类，替换原有继承关系。
-                以此将Hilt插入到正常代码逻辑中，实现Hilt的功能。
-  （2）
+- 为什么要使用？
+  （1.1）提高了代码的复用性
+  （1.2）减小了类之间的耦合度（A不用关心B如何构造、也不用持有B构造相关的参数的引用）
+  如何生成代码？ 
+  (1)Hilt使用注解处理器生成代码。对注解的处理发生在编译器将源文件转换成JAVA字节码期间。
+- 原理总结：
+  （1）通过注解标记需要被注入的类，然后通过注解处理器为A类创建一个hilt_A的类，插入到A的继承关系中作为A类的父类。
+  （2）在hilt_xx中的onCreate方法中提供变量初始化的入口，所有被注解的变量从这里开始一层一层的全部实例化。
+  （3）组件的生命周期管理是通过ViewModel来实现
+- 使用中出现的问题？如何解决？
+
 ### 二、EventBus
 
 - 事件总线
 
+
 ### 三、ARouter
 
-- 路由框架
+- 定义：ARouter是一套路由框架，可以实现同一个项目中不同模块之间Activity的跳转。
+- 为啥要使用？
+  （1）ARouter比较成熟，用法简单，可以实现不同模块之间的跳转、参数传递
+  （2）实现项目的组件化、模块化
+  （3）减少组件组件之间的依赖关系
+- 原理总结：
+  （1）通过注解标记Activity，在编译期间通过APT(注解处理器)
+- 为什么不同Model之间不能跳转？ARouter怎么样解决？
 
 ### 四、RxJava
 
