--- a/app/04.Android hot frame.md
+++ b/app/04.Android hot frame.md
@@ -1,18 +1,18 @@
 Android Hot Frame
 [经典问题汇总](https://blog.csdn.net/zhangjin1120/category_10950938_3.html)
 五问：定义是什么？为什么要使用？原理是什么？使用中出现的问题？如何解决？（优缺点）
+
 ### 一、Hilt、Dagger
 
 - [简述依赖注入框架 Hilt 的实现原理](https://blog.csdn.net/xx23x/article/details/121636223)
-- 定义：Hilt是Jetpack组件，是基于Dagger2封装的框架。
-  在一个类A中需要使用类B的实例，可不在A中对B进行实例化，而通过Hilt让B 自行进行传递相关构造函数中参数并且实例化后传入A中。
-  对于类A，它并不需要关心B内部如何构造，B的构造方式发生变化后A类中也可以不做任何改变。
-- 为什么要使用？
-  （1.1）提高了代码的复用性
-  （1.2）减小了类之间的耦合度（A不用关心B如何构造、也不用持有B构造相关的参数的引用）
-  如何生成代码？ 
-  (1)Hilt使用注解处理器生成代码。对注解的处理发生在编译器将源文件转换成JAVA字节码期间。
-- 原理总结：
+- 定义：Hilt是Jetpack组件，是基于Dagger2封装的框架。 在一个类A中需要使用类B的实例，可不在A中对B进行实例化，而通过Hilt让B
+  自行进行传递相关构造函数中参数并且实例化后传入A中。 对于类A，它并不需要关心B内部如何构造，B的构造方式发生变化后A类中也可以不做任何改变。
+- 为什么要使用？ 
+  （1）提高了代码的复用性 
+  （1）减小了类之间的耦合度（A不用关心B如何构造、也不用持有B构造相关的参数的引用） 
+  如何生成代码？
+  （1）Hilt使用注解处理器生成代码。对注解的处理发生在编译器将源文件转换成JAVA字节码期间。
+- 原理总结： 
   （1）通过注解标记需要被注入的类，然后通过注解处理器为A类创建一个hilt_A的类，插入到A的继承关系中作为A类的父类。
   （2）在hilt_xx中的onCreate方法中提供变量初始化的入口，所有被注解的变量从这里开始一层一层的全部实例化。
   （3）组件的生命周期管理是通过ViewModel来实现
@@ -20,26 +20,73 @@ Android Hot Frame
 
 ### 二、EventBus
 
-- 事件总线
-
+- 定义：基于观察者模式，是一款发布/订阅的事件总线框架
+- 为啥要使用？
+  使用最多的场景：在一个Activity的接口中获取到返回内容，需要及时更新或者通知其它Activity时。内部使用了线程池、handler进行事件发送和线程切换，
+    用broadcast、socket、contentProvider也可以达到目的。
+  使用eventBus的优点：
+  （1）耦合度低，除开本身发生的事件外eventBus不依赖其它类。
+  （2）简洁方便，事件的发生和接收区分开，发生事件非常灵活、接收事件简单方便。
+  （3）效率高、体积小，可跨线程通信
+  缺点：
+  （1）事件发生、接收太分布，不易维护
+  （2）需要手动注册和反注册，容易造成内存泄漏
+  （3）每个事件都会定义一个类，容易造成类膨胀
+  解决：
+  （1）使用LiveData、Flow替代。LiveData
+- 原理总结：
+    核心原理：EventBus使用发布/订阅者模式，使用注解@Subscribe标记的订阅事件，使用post方法发送事件。register(this)方法会查找该类中，
+      带@Subscrbie注解的方法，把event和订阅者存为一个hashMap，post方法调用后，根据入参event从hashMap中取出对应的订阅对象，调用订
+      阅对象的订阅方法完成通信。
+  （1）调用register方法，查找出订阅方法存入List，调用subscribe将事件类型和订阅方法关联
+  （2）调用post方法，利用线程池和Handler，事件类型找到对应的订阅方法，通过handler进行分发。
+- 使用的优缺点？
 
 ### 三、ARouter
 
-- 定义：ARouter是一套路由框架，可以实现同一个项目中不同模块之间Activity的跳转。
-- 为啥要使用？
-  （1）ARouter比较成熟，用法简单，可以实现不同模块之间的跳转、参数传递
-  （2）实现项目的组件化、模块化
+- 定义：ARouter是一套路由框架，可以实现同一个项目中不同模块之间Activity的跳转。还带有路由拦截、提供服务接口等功能。
+- 为啥要使用？ 
+  （1）ARouter比较成熟，用法简单，可以实现不同模块之间的跳转、参数传递 
+  （2）实现项目的组件化、模块化 
   （3）减少组件组件之间的依赖关系
 - 原理总结：
-  （1）通过注解标记Activity，在编译期间通过APT(注解处理器)
+  （1）通过注解标记Activity
+  （2）通过反射，找到被注解标记的类名和包名，并保存成一个路由表hashMap
+  （3）通过APT技术根据保存的类名和包名生成对应的Java代码，这段代码的功能就是把activity.class存入路由表中
+  （4）不同的model需要跳转到对应的Activity时，直接从hashmap中取出对应的activity.class从而实现跳转
 - 为什么不同Model之间不能跳转？ARouter怎么样解决？
-
+  为啥？：不同model之间没有相互依赖的关系（不能直接引用不同model内的代码）。
+  解决？：所有业务model都依赖公共的路由model，路由model中包含了路由表，可以从路由表中取出activity.class以实现跳转
+- 使用中出现的问题？如何解决？
+  配置好路由后，跳转提示 router no find
+  （1）根据router重新检查路由的配置（路由依赖、项目配置）
+  （2）路径知否错了 有分组
 ### 四、RxJava
 
-- 异步库
+- 定义：
+- 为啥要使用？
+- 原理总结：
+- 使用的优缺点？
 
 ### 五、Retrofit
 
-- 请求库封装
+- 定义：
+- 为啥要使用？
+- 原理总结：
+- 使用的优缺点？
 
 ### 六、AutoSize
+
+- 定义：
+- 为啥要使用？
+- 原理总结：
+- 使用的优缺点？
+
+### 七、OKHttp
+
+- 定义：
+- 为啥要使用？
+- 原理总结：
+- 使用的优缺点？
+
+### 八、Glide
