--- a/app/03.Android basic.md
+++ b/app/03.Android basic.md
@@ -76,7 +76,7 @@ https://blog.csdn.net/hello_1995/article/details/120075342
   
 5、ANR日志分析？
   
-6、SharedPreferences的工作原理?读写存在的问题?造成ANR的原因？如何优化？
+6、SharedPreferences的工作原理?读写存在的问题?造成ANR的原因？如何优化？进程同步？
 - 原理:
     （1）加载文件：SharedPreferences是一个接口，其实现类是SharedPreferencesImpl。在此类中会开启子线程，调用loadFromDisk加载xml
             文件，将xml文件数据读取到HashMap集合中保存。
@@ -101,11 +101,11 @@ https://blog.csdn.net/hello_1995/article/details/120075342
   （2）使用SP时，在工作线程中建议使用commit，此方法开销更小。在主线程时，要使用apply进行异步提交。
   （3）使用MMKV替换
   （4）使用DateStore替换
-  
+- 进程同步：
+    
 
-7、Jetpact相关的ViewModel、DataBinding、LiveData、Flow、Lifecycle？
+7、Jetpack相关的ViewModel、DataBinding、LiveData、Flow、Lifecycle？
 - ViewModel
-- Data
 
 8、ActivityThread类
 
@@ -114,5 +114,29 @@ https://blog.csdn.net/hello_1995/article/details/120075342
 10、文件编译、转换阶段和过程、插件的编译原理
 
 11、注解处理器的工作原理？
+
+12、IntentFilter匹配规则，action和category区别？                  
+
+13、ContentProvider原理
+
+14、TouchEvent传递过程？ onTouchEvent返回false怎么办?
+
+15、磁盘内存映射原理
+
+16、handler机制相关 looper  阻塞线程？
+
+17、activity 启动过程  activity创建过程   activity启动到加载view的过程
+
+18、view绘制过程
+
+19、RecyclerView相关
+
+20、ANR相关  OOM相关
+
+21、图片加载、压缩、缓存
+
+22、MCV\MVP\MVVM
+
+23、为什么不能在子线程刷新UI?
 
 
