--- a/app/04.Android hot frame.md
+++ b/app/04.Android hot frame.md
@@ -1,6 +1,7 @@
 Android Hot Frame
 [经典问题汇总](https://blog.csdn.net/zhangjin1120/category_10950938_3.html)
-五问：定义是什么？为什么要使用？原理是什么？使用中出现的问题？如何解决？（优缺点）
+谈谈你对XX框架的理解？
+回答：是什么？为什么要使用（优缺点）？原理是什么？出现的问题？如何解决？
 
 ### 一、Hilt、Dagger
 
@@ -33,7 +34,7 @@ Android Hot Frame
   （2）需要手动注册和反注册，容易造成内存泄漏
   （3）每个事件都会定义一个类，容易造成类膨胀
   解决：
-  （1）使用LiveData、Flow替代。LiveData
+  （1）使用LiveData替代。LiveData具有生命周期不用注册和反注册
 - 原理总结：
     核心原理：EventBus使用发布/订阅者模式，使用注解@Subscribe标记的订阅事件，使用post方法发送事件。register(this)方法会查找该类中，
       带@Subscrbie注解的方法，把event和订阅者存为一个hashMap，post方法调用后，根据入参event从hashMap中取出对应的订阅对象，调用订
@@ -63,11 +64,29 @@ Android Hot Frame
   （2）路径知否错了 有分组
 ### 四、RxJava
 
-- 定义：
+- 定义：基于观察者模式产生的一个响应式编程框架。基于事件流，可以用链式调用的方式实现异步操作。
 - 为啥要使用？
+  （1）链式调用，结构清晰，维护方便
+  （2）功能强大，提供多种操作符，能够与Retrofit结合使用
+  （3）线程切换容易
 - 原理总结：
+- 线程切换原理：
+  
 - 使用的优缺点？
-
+  缺点:
+  （1）学习成本高，不够轻量级
+  (2)对异步操作的
+- 出现的问题以及解决方案？（内存泄漏）
+  （1）结合请求使用时，没有关注请求的生命周期，导致的activity已经关闭，可请求仍然在进行，可能会造成内存泄露。
+  解决：
+  1.手动取消。对subscriber订阅者进行一个封装，使用disposable进行取消订阅（只是取消接收事件，没有取消发送事件）
+  2.使用rxLifecycle插件，使得Rxjava有生命周期的感知，能够及时取消订阅。
+  RxLifecycle的原理：
+       （1）RxLifecycle提供有组件对应的RxXX容器类，让组件继承对应的容器类，与组件的生命周期进行绑定
+       （2）再使用compose(bindToLifecycle)进行绑定（订阅）
+       （3）当组件生命周期发生变化时，通过容器类触发对应生命周期方法，发送生命周期事件，订阅者收到事件后进行相应的处理。
+- 操作符：
+  
 ### 五、Retrofit
 
 - 定义：
@@ -90,3 +109,8 @@ Android Hot Frame
 - 使用的优缺点？
 
 ### 八、Glide
+
+- 定义：
+- 为啥要使用？
+- 原理总结：
+- 使用的优缺点？
