--- a/app/04.Android hot frame.md
+++ b/app/04.Android hot frame.md
@@ -62,22 +62,31 @@ Android Hot Frame
   配置好路由后，跳转提示 router no find
   （1）根据router重新检查路由的配置（路由依赖、项目配置）
   （2）路径知否错了 有分组
+  
 ### 四、RxJava
 
 - 定义：基于观察者模式产生的一个响应式编程框架。基于事件流，可以用链式调用的方式实现异步操作。
 - 为啥要使用？
-  （1）链式调用，结构清晰，维护方便
+  （1）链式调用 （能够把复杂繁琐嵌套多的异步操作用链式调用的方式串联起来，结构清晰，维护方便）
   （2）功能强大，提供多种操作符，能够与Retrofit结合使用
-  （3）线程切换容易
+  （3）线程切换容易 （内部封装了很多线程切换模型）
 - 原理总结：
+  （1）创建Observable，在内部可调用onNext\onComplete\onError 发送事件
+  （2）创建observer，定义接收事件处理方式
+  （2）指定生产线程，subscribeOn(Schedulers.io())
+  （3）指定消费消除，observeOn(AndroidSchedulers.mainThread())
+  （4）订阅subScribe(observer)，通过内部的subScribeActual方法创建了发射器CreateEmitter，通过发射器将observable的事件发送到
+        observer中去。
 - 线程切换原理：
-  
+  （1）subscribeOn()
+  （2）observeOn()
 - 使用的优缺点？
   缺点:
   （1）学习成本高，不够轻量级
-  (2)对异步操作的
+  （2）没有进行生命周期的管理，需要配合RxLifecycle
+  （3）源码复杂，设计模式众多
 - 出现的问题以及解决方案？（内存泄漏）
-  （1）结合请求使用时，没有关注请求的生命周期，导致的activity已经关闭，可请求仍然在进行，可能会造成内存泄露。
+  结合请求使用时，没有关注请求的生命周期，导致的activity已经关闭，可请求仍然在进行，可能会造成内存泄露。
   解决：
   1.手动取消。对subscriber订阅者进行一个封装，使用disposable进行取消订阅（只是取消接收事件，没有取消发送事件）
   2.使用rxLifecycle插件，使得Rxjava有生命周期的感知，能够及时取消订阅。
@@ -86,26 +95,78 @@ Android Hot Frame
        （2）再使用compose(bindToLifecycle)进行绑定（订阅）
        （3）当组件生命周期发生变化时，通过容器类触发对应生命周期方法，发送生命周期事件，订阅者收到事件后进行相应的处理。
 - 操作符：
-  
+  （1）创建   just\create\timer\interval
+  （2）变换   map\flatmap
+  （3）功能   subscribe(订阅)、subscribeOn(指定生产线程)、observeOn(指定消费线程)、compose()
+  （4）过滤   elementAt\takeLast
+  （5）条件   contains\isEmpty
+- 背压机制： 
+  背压产生的原因：上游事件的发送速度大于下游事件处理速度。
+  解决方案：
+  （1）早期：rxJava使用一个队列将积压的事件存储起来。但是数据流太多一直得不到处理或者处理了一般出现异常退出了 容易造成OOM
+  （2）改进：1.设置缓存值的大小observeOn(Schedulers.computation(),false,1000)第三个参数即是默认大小
+            2.使用策略模式对背压进行处理
+            ```
+            onBackpressureBuffer(long capacity, Action onOverflow, BackpressureOverflowStrategy overflowStrategy)
+            overflowStrategy：溢出策略
+            ERROR：直接报错
+            DROP_LATEST：丢弃最新的数据，只存储旧的数据，使用场景如对数据精度要求不高的情况，旧的数据也可以正常使用
+            DROP_OLDEST：丢弃旧的数据，存储新的数据，使用场景如定位情况，可以把旧的丢弃，存储新的定位数据就可以
+            ```     
 ### 五、Retrofit
 
-- 定义：
+- 定义：Retrofit是基于OKHttp封装的一套网络请求框架，只是对OKHttp上层进行了封装，实际请求还是用的OKHttp
 - 为啥要使用？
+  （1）相对于直接使用OKHttp可以减少很多重复代码（主要是对OKHttp配置、相关接口配置的代码）
+  （2）Retrofit能够结合RxJava使用，让请求操作变得简洁流畅。
+  （3）利用注解标记，面向接口编程，使用简单，耦合度低
+  （4）功能多，能够添加多种适配器Adapter、拦截器Interceptor、数据转换器GsonConverter
 - 原理总结：
+  （1）builder，利用builder模式对Retrofit进行配置，设置baseUrl、添加client(okhttp)、添加拦截器、添加CallAdapter、添加数据转换器
+  （2）create，传入注解标记的接口类。通过代理模式生成请求接口的代理类
+  （3）loadServiceMethod，通过解析注解找到对应的接口方法，存储在ConcurrentHashMap中。
 - 使用的优缺点？
 
 ### 六、AutoSize
-
-- 定义：
+[AutoSize原理](https://blog.csdn.net/u012588160/article/details/105876735/)
+  为什么要做适配？
+  开发时对View大小的数值是固定的。但是不同的手机，屏幕分辨率（px）、屏幕尺寸（screenSize）、屏幕像素密度(density)各不一样，
+  就会导致在某些机型上出现View大小差别巨大的情况。
+- 定义：一个屏幕适配的框架
 - 为啥要使用？
+  （1）对原生代码无入侵
+  （2）使用简单方便
 - 原理总结：
+  1.无入侵启动原理
+      
+  2.适配原理 （dp(屏幕实际像素) = px(分辨率) / density）
+  px = dp  * (dpi / 160 )
+  density = dpi/160
+  => px = dp*density
+  => dp = px/density
+  通过修改density 值而达到每种分辨率手机的宽度dp值相同。
+  当前设备屏幕总宽度（单位为像素）/ 设计图总宽度（单位为 dp) = density
 - 使用的优缺点？
-
+  **[AndroidAutoSize开源库屏幕适配分析](https://cloud.tencent.com/developer/article/2095598)**
+  缺点：整个项目原生界面都进行了适配，但是项目中可能出现引用一些三方的View就会导致和原有的适配不一致的现象。
+  解决：手动取消适配
 ### 七、OKHttp
 
-- 定义：
+- 定义：一套网络请求框架
 - 为啥要使用？
+  （1）可扩展性高，client中可以配置dns、proxy、timeOut、缓存等
+  （2）通信效率高，使用了连接池缓存
+  （3）层次机构清晰，方便排查问题
+  （4）拦截器可自定义可自扩展
 - 原理总结：
+  （1）构建：使用builder模式构建client，同时可配置dns、proxy、timeOut
+  （2）请求：调用client.newCall(request)，具体交给RealCall.newRealCall执行。
+  （3）调度：execute为同步方法，enqueue为异步方法，两种方法均由client.dispatcher执行。dispatcher为调度器，
+  内部封装线程池，使用双端队列ArrayDeque存储同步或异步请求。dispatcher主要负责管理call，交由线程池
+  开启、结束call请求，最终call请求还是在RealCall中实现的。
+  （4）执行：RealCall中实现了NamedRunnable中的execute(在Runnable的run方法中执行)，在此方法中通过getResponseWithInterceptorChain调用了
+  五层责任链，RetryAndFollowUp、Bridge、Cache、Connect、CallServer，责任链会一层一层往上返回结果，责任链调用后返回chain对象，然后
+  调用chain.process(originalChain)进行请求，返回response对象。
 - 使用的优缺点？
 
 ### 八、Glide
