--- a/app/03.Android basic.md
+++ b/app/03.Android basic.md
@@ -137,6 +137,151 @@ https://blog.csdn.net/hello_1995/article/details/120075342
 
 22、MCV\MVP\MVVM
 
-23、为什么不能在子线程刷新UI?
+23、为什么不能在子线程刷新UI?如何才能在子线程中更新UI?
 
+- 在RootViewImp中有requestLayout方法，在子线程中进行UI更新操作会抛出异常
+```
+public void requestLayout(){
+    if(!mHandlingLayoutInLayoutRequest){
+        checkThread();
+    }
+}
 
+void checkThread(){
+    if(mThread != Thread.currentThread){
+        throw new CalledFormWrongThreadExeception("only the original thread that created a view ....")
+    }
+}
+```
+
+- 如何才能在子线程中更新UI?
+  1. 手写addView
+     子线程中创建一个looper，再调用windowManager重写一个类似addView方法用于加载view
+  2. SurfaceView  
+     SurfaceView内部有一个holder
+     
+24、Android窗口机制？Activity加载布局的流程？PhoneWindow？DecorView？ViewRootImpl？Activity如何加载？
+[Android UI加载流程](https://blog.csdn.net/YoungOne2333/article/details/125211613)
+- Activity加载布局的流程   基本流程：Activity -> PhoneWindow -> DecorView -> layoutInflater
+    （1）Activity：在Activity的onCreate中调用setContentView方法。实际上Activity调用了getWindow().setContentView()，
+    Activity持有一个window，而window是一个抽象类，唯一实现是PhoneWindow。可以认为每个Activity首先是含有一个PhoneWindow。
+    ```
+    public void setContentView(@LayoutRes int layoutResID) {
+        getWindow().setContentView(layoutResID);
+        initWindowDecorActionBar();
+    }
+    ```
+    （2）PhoneWindow：判断是否有mContentParent，如果没有则调用installDecor()
+    ```
+    publick void setContextView(){
+        if(mContentParent == null){
+            installDecor();
+        }else if(!hasFeature(FEARE_)){
+            mContentParent.removeAllViews()
+        }
+    }
+    ...
+    mLayoutInflater.inflate(layoutResID，mContentParent);
+    ```
+    总结：Activity内置PhoneWindow，PhoneWindow最外层是DecorView，通过decorView使用layoutInflater加载xml布局。
+
+- DecorView  通过inflate方法加载布局
+  DecorView是PhoneWindow类的一个内部类，继承于FrameLayout。是整个ViewTree的最顶层View，代表了整个应用的界面。
+  使用LayoutInflate.inflate(resID,contentParent)，contentParent是DecorView的content部分。
+  
+- ViewRootImpl（ViewRootImpl是DecorView的parent，view的三大流程都是由ViewRootImpl实现的）
+  在ActivityThread内部，
+  （1）先获取Activity的window对象，再通过window获取decorView对象，以及WindowManager(抽象类，实现类是WindowManagerImpl)。
+  （2）调用WindowManagerImpl.add()，在WindowManager内部又经过一次调用后，新建了RootViewImpl 
+  （3）ViewRootImpl调用setView方法设置DecorView，是DecorView的parent
+  （4）setView方法中会调用requestLayout()执行view的绘制
+
+25、ActivityThread?Activity如何被加载启动？
+[ActivityThread 详解](http://www.qb5200.com/article/397310.html)
+- ActivityThread：主要作用是根据AMS负责调度和管理Activity、Fragment，执行一些其它操作。
+  （1）main方法中，创建了主线程的looper（用ThreadLocal存储looper），创建了ActivityThread实例，建立了binder通道，开启了looper循环。0
+  main方法是整个应用的入口，Java程序初始类会执行这个main方法。应用的主要消息通信都是依靠looper进行的。
+  ```
+  public static void main(String[] args) {
+        //....
+        //创建Looper和MessageQueue对象，用于处理主线程的消息
+        Looper.prepareMainLooper();
+        //创建ActivityThread对象
+        ActivityThread thread = new ActivityThread(); 
+        //建立Binder通道 (创建新线程)
+        thread.attach(false);
+        Looper.loop(); //消息循环运行
+        throw new RuntimeException("Main thread loop unexpectedly exited");
+    }
+  ```
+  （2）main中。主线程Looper初始化       Looper.prepareMainLooper()
+  （3）activityThread中。主线程Handler初始化
+  （4）activityThread中 => thread.attach()中。AMS通过attachApplication方法绑定ActivityThread类（AMS通过binder与ActivityThread通信，完成对组件的管理）
+```
+   //ActivityThread的attach方法：
+private void attach(boolean system) {
+    ...
+    if (!system) {
+        final IActivityManager mgr = ActivityManager.getService();
+        try {
+            mgr.attachApplication(mAppThread);
+        } catch (RemoteException ex) {
+            throw ex.rethrowFromSystemServer();
+        }else{
+            ...
+        }
+    }
+}
+
+```    
+  （4）AMS => attachApplication中。
+```
+//ActivityManagerService中的方法：
+public final void attachApplication(IApplicationThread thread) {
+    synchronized (this) {
+        int callingPid = Binder.getCallingPid();
+        final long origId = Binder.clearCallingIdentity();
+        attachApplicationLocked(thread, callingPid);
+        Binder.restoreCallingIdentity(origId);
+    }
+}
+```
+  （5）AMS => attachApplication中 => attachApplicationLocked
+```
+//AMS中的方法，主要功能有以下两步
+private final boolean attachApplicationLocked(IApplicationThread thread, int pid) {
+    ...
+    //主要用于创建Application，用调用onCreate方法
+    thread.bindApplication(...);
+    ...
+    //主要用于创建Activity
+    if (mStackSupervisor.attachApplicationLocked(app)) {
+        ...
+    }
+}
+```  
+ （6）AMS => bindApplication  主要用于创建Application
+ （7）AMS => attachApplicationLocked  主要用于创建Activity
+ 
+26. 启动白屏\黑屏原因？
+   在decorView加载布局之前，WindowManager会先加载app主题样式中的windowBackground作为app的预览元素
+    ，然后再真正去加载activity的layout布局暖启动/热启动引起的白屏/黑屏
+    
+27. 崩溃分析？
+    
+28. 事件传递、Ui绘制
+
+29. BUG解决过程？
+
+30. 产生ARN的原因？ARN日志分析？
+[ANR日志分析](https://blog.csdn.net/yang553566463/article/details/125335624)
+[ANR日志分析全面解析](https://www.jianshu.com/p/9b36b337d25f)
+- 原因：（1）主线程被耗时占用
+    （2）主线程中执行了死循环
+    （3）主线程等待子线程释放锁的时间长
+    （4）应用内存紧张
+- 日志分析：
+  （1）找到日志文件：1./data/anr文件下，使用Android Studio打开
+                   2.执行adb 命令 导出设备anr日志
+  （2）分析文件：
+    
