--- a/app/01.Java basic.md
+++ b/app/01.Java basic.md
@@ -118,9 +118,9 @@ retrofit是如何获取泛型擦除后的泛型类型的？
         error:StackOverflowError、OutOfMemoryError
 - 区别：
     强引用：普通对象都默认强引用，只要有一个引用指向这个对象，这个对象就不会被垃圾回收
-    弱引用：比强引用稍弱，当JVM内存不足时，垃圾回收机制才会试图去回收这个对象
-    软引用：垃圾收集器扫描到软引用时会直接进行回收
-    虚引用：虚引用对象随时都可能被垃圾收集器回收。但是它不能单独使用，必须配合引用队列，虚引用的目的
+    弱引用：week 比强引用稍弱，当JVM内存不足时，垃圾回收机制才会试图去回收这个对象
+    软引用：soft 垃圾收集器扫描到软引用时会直接进行回收
+    虚引用： 虚引用对象随时都可能被垃圾收集器回收。但是它不能单独使用，必须配合引用队列，虚引用的目的
             主要是跟踪垃圾回收的过程。
 
 
