--- a/app/02.Kotlin basic.md
+++ b/app/02.Kotlin basic.md
@@ -5,9 +5,12 @@
     Kotlin中的函数可以有默认参数所以不需要重载方法，加上JvmOverloads主要是为了兼容Java代码。
 -   
 
-2、关键字inline、noinline、crossInline的含义？
+2、关键字inline、noinline、crossInline的含义？ let with run apply
 
-Kotlin相关
+let	1	it	lambda最后一行代码返回值
+with	2	this 或者 省略	lambda最后一行代码返回值
+run	1	this 或者 省略	lambda最后一行代码返回值
+apply	1	this 或者 省略	返回调用者对象
 
 # 一、协程
 
@@ -94,9 +97,43 @@ Kotlin相关
            HomeViewModel()
     }
 ```
-- 原理：by lazy 修饰后的变量会以Lazy 变量的形式暂存，Lazy变量的默认实现是SynchronizedLazyImpl类，在此类中value值会通过synchronized()的方式进行初始化工作。
+- 原理：by lazy 修饰后的变量会以Lazy 变量的形式暂存，Lazy变量的默认实现是SynchronizedLazyImpl类，
+  在此类中value值会通过synchronized()的方式进行初始化工作。
 
-# 四、LiveData\Flow
+# 四、LiveData？ 粘性事件？
+- 定义：使用了观察者模式，是一种可观察的数据存储类，具有生命周期感知能力。
+- 为什么要使用？
+  （1）实时刷新数据
+  （2）不会出现内存泄漏
+  （3）不会因为Activity处于STOP状态而导致崩溃
+  （4）不需要手动解除观察
+- 原理分析： liveData本身看作一个被观察者
+  （1）observe(lifecycleOwner，observer) 利用lifecycle绑定组件的生命周期，observer用于接收和处理事件
+  （2）postValue 用Synchronized加锁，然后调用线程池完成线程通信
+  （3）setValue  只能用于主线程，内部调用dispatchingValue回调onChange方法
+- 粘性事件产生原因？
+  先发生消息后注解观察者
+- 解决方案：
+  （1）利用hook修改mLastVersion值，让这个值与mVersion一致
+  （2）用SingleLiveEvent 解决数据倒灌的问题，在onChange之前判断事件是否已经被消费了，如果已经消费了则不再往下传递
   
-
 # 五、ViewModel
+- 定义：
+- 原理：  
+- 如何存储？
+  viewModelStore
+# 六、DataBing
+- 数据绑定。再xml布局用layout标签包裹，声明<data>标签，里面定义需要绑定的数据，然后就可以直接在xml值使用了。
+- 原理：
+  DataBinding在编译后会生成一个Binding类，在这个类持有View和Model，类中会对布局中的控件通过tag查找出来，设置一个
+  监听来实时更新数据和UI。
+  
+# 七、Lifecycle原理
+- 定义：lifecycle是一个类，用于存储有关组件（Activity\Fragment）的生命周期状态信息，并且允许其它对象观察此状态。
+  （有关组件可以看成一个被观察者，通过lifecycle向其他组件发生生命周期变化的状态）
+- 原理：
+  （1）lifecycleOwner   生命周期拥有者（Activity等可以看成是被观察者）
+  （2）lifecycleObserver  观察者（开发者自定义的处理事件的逻辑，重写生命周期方法）
+  （3）lifecycle        lifecycle注入一个无页面的fragment，这个fragment的生命周期与组件关联的，组件生命周期触发后，lifecycle通过反射的方式将生命
+                        周期变化发送给观察者  （lifecycle.addObserver）
+
