--- a/app/03.Android basic.md
+++ b/app/03.Android basic.md
@@ -276,6 +276,8 @@ private final boolean attachApplicationLocked(IApplicationThread thread, int pid
 30. 产生ARN的原因？ARN日志分析？
 [ANR日志分析](https://blog.csdn.net/yang553566463/article/details/125335624)
 [ANR日志分析全面解析](https://www.jianshu.com/p/9b36b337d25f)
+    
+ANR:应用无响应  Activity 5s BroadCastReceiver 10  service 20
 - 原因：（1）主线程被耗时占用
     （2）主线程中执行了死循环
     （3）主线程等待子线程释放锁的时间长
@@ -283,5 +285,7 @@ private final boolean attachApplicationLocked(IApplicationThread thread, int pid
 - 日志分析：
   （1）找到日志文件：1./data/anr文件下，使用Android Studio打开
                    2.执行adb 命令 导出设备anr日志
-  （2）分析文件：
+  （2）分析文件：1.分析发生的线程  主线 or IO线程 或者 其它子线程
+                2.发生anr的方法
+                3.查看对应的方法，检查代码逻辑
     
