--- a/app/04.Android hot frame.md
+++ b/app/04.Android hot frame.md
@@ -166,7 +166,15 @@ Android Hot Frame
   开启、结束call请求，最终call请求还是在RealCall中实现的。
   （4）执行：RealCall中实现了NamedRunnable中的execute(在Runnable的run方法中执行)，在此方法中通过getResponseWithInterceptorChain调用了
   五层责任链，RetryAndFollowUp、Bridge、Cache、Connect、CallServer，责任链会一层一层往上返回结果，责任链调用后返回chain对象，然后
-  调用chain.process(originalChain)进行请求，返回response对象。
+  调用chain.process(originalChain)进行请求，返回response对象。   
+  
+- 五大拦截器：
+    retry: 重试和重定向
+    bridge: 补全请求，并对响应进行额外处理
+    cache: 请求前查询缓存，获得响应并判断是否需要缓存
+    connect: 与服务器完成TCP连接 （Socket）
+    callServer:与服务器通信;封装请求数据与解析响应数据(如:HTTP报文)
+
 - 使用的优缺点？
 
 ### 八、Glide
