--- a/reivew/2.2.Android hot frame.md
+++ b/reivew/2.2.Android hot frame.md
@@ -150,6 +150,7 @@ Android Hot Frame
   **[AndroidAutoSize开源库屏幕适配分析](https://cloud.tencent.com/developer/article/2095598)**
   缺点：整个项目原生界面都进行了适配，但是项目中可能出现引用一些三方的View就会导致和原有的适配不一致的现象。
   解决：手动取消适配
+
 ### 七、OKHttp
 
 - 定义：一套网络请求框架
@@ -183,3 +184,22 @@ Android Hot Frame
 - 为啥要使用？
 - 原理总结：
 - 使用的优缺点？
+
+### 九、SharedPreference\MMKV\DataStore
+- 
+- 原理：
+  （1）SP:
+  （2）MMKV:   通过mmap内存映射文件，提供一段可供随时写入的内存块，APP只管往里面写数据，由操作系统负责将内存回写到文件，
+  （2）DataStore:
+- 优点：
+  SP:
+  MMKV:（1）写速度极快 (写入内存的同时，同步写入磁盘（虚拟内存），由系统将虚拟内存的数据写入真实的内存中)
+  DataStore:（2）支持多进程
+- 缺点：
+  SP: （1）卡顿（读：加载xml是异步操作，读文件是在主线程中进行的，如果读文件时还没有加载完成，就会造成卡顿；）
+      （2）ANR 
+       (3) 回调 使用apply保存时吗，想要获取保存结果需添加回调
+  MMKV:（1）丢失数据（不支持数据备份和恢复）
+  DataStore: 
+- MMKV -> 将数据写入内存(保存成hash表) -> 内存与磁盘空间的一块区域存在内存映射关系
+
