--- a/reivew/4.0.algorithm.md
+++ b/reivew/4.0.algorithm.md
@@ -4,3 +4,51 @@
     （1）基本思路？
     （2）能否用基本算法？数据结构？
     （3）代码实现
+
+项目总结：
+    （1）框架使用
+    （2）架构调整
+    （3）技术方案
+    （4）问题解决 Crash ANR 卡顿 内存泄漏 内存溢出OOM
+    （5）实现思路
+
+todo 
+**1、解决问题相关 2、框架相关  3、性能优化相关  4、架构相关   5、基本算法or数据结构**
+todo 
+1.CAS的使用
+2.提前下载webView资源? 提前加载webView链接？
+3.为什么要使用到这些设计模式？
+4.LinkedList 和 LinkedQueue 对比？
+
+项目总结：
+    
+### 一、核心业务相关 （策略模式、代理模式、责任链模式）
+1、充电业务：
+- 流程：扫码 -> 选枪 -> 支付 or 先充后付 -> 充电中（转场动画，显示充电相关数据） -> 充电结束 -> 支付 -> 统计
+- 问题：
+  （1）支付问题：存在很多中支付方式（先付后充、先充后付、微信支付分、三方支付），代码臃肿，维护难
+   解决：策略模式封装支付策略（支付模式的选择），代理模式封装支付方式（三方支付）
+  （2）充电中界面卡顿ANR：需要实时刷新数据，用的接口轮询的模式。但是在接口轮询过程中有其它操作，不断的创建了新的类新的对象。
+   解决：通过Profile跟踪，发现Memory占用随着时间一步一步攀升。想到有接口轮询，立即排查代码。
+   有一个动画显示处理相关的类，在轮询中不断的创建，而且没有进行回收，导致内存吃紧。  
+   心跳 or  轮询 
+  
+2、导航业务：
+- 流程：查询并显示停车场 -> 用户选点 -> 路径规划（室内和室外） -> 开始室外导航 or 结束 -> 开始室内导航 or 结束-> 导航统计
+- 问题：
+    （1）webView加载：利用转场动画实现无缝切换Activity画面。要求加载web的速度快流畅。
+     - 逻辑：从室外导航画面切换到室内导航
+     - 问题：转场僵硬，加载web的速度慢
+     - 解决：1.使用转场动画解决转场僵硬的问题（提前创建Fragment，在播放完转场动画后显示）
+            2.对web加载进行优化（分析webView的加载流程 创建->连接->加载->显示）
+            - 创建webView复用池，提前创建好webView放入池中，节省web创建时间    
+            - 提前下载webView资源？节省资源加载的时间
+            - 提前加载webView链接？
+
+    （2）语言播报问题：
+     - 逻辑：基本播报逻辑是，室外时，导航语音由SDK自带播放，进入两公里范围后，会播报停车位状态（是否已经到达附近、是否被抢占等），
+        室内时，从室内SDK获取文字，播报导航语音。
+     - 问题：1.解决语音播放冲突的问题，室外语音播报时，两种播报不能重叠；2.连续播放需要控制播放的间隔
+     - 解决：设计一个语音播报的控制类VoiceController，主要实现播放、控制（开始播放、播放中、结束）、存储语音文字功能，
+        比较核心的是用到了ConcurrentLinkedQueue。
+        
