--- a/reivew/2.1.Android performance.md
+++ b/reivew/2.1.Android performance.md
@@ -48,6 +48,64 @@
 - （2）提前启动webView。
 - （3）预加载
 - （4）资源缓存
-
-
+    重写webViewClient的shouldInterceptRequest方法。当向服务器访问这些静态资源时进行拦截，检测到是相同资源后，用本地的资源替代。
   
+
+8、ANR问题解决？
+- 产生ANR原因：
+  （1）主线程存在耗时操作
+  （2）主线程中，有复杂的layout布局、频繁的I/O操作
+  （3）cpu资源被抢占
+  （4）内存紧张
+  （5）应用内存泄露
+  （6）频繁Crash
+- 定位：
+  （1）对于能够复现的场景：使用Profiler查看CPU和内存使用情况，分析CPU使用率或者内存占用过高的时间节点，找到对应时间节点的堆栈调用信息或者线程信息，
+    查看对应代码。
+  （2）对于不能复现的场景：找到对应trace文件，分析文件中相关的数据，找到callback日志
+- 解决：
+  （1）移除主线程耗时操作，用子线程处理
+  （2）优化内存
+  （3）优化布局、绘制等，优化I/O操作
+  
+9、OOM问题解决？
+- 定义：JVM没有足够的内存给对象进行空间分配，导致程序抛出OutOfMemory异常，此异常会导致程序被kill。
+  按照JVM规范，除了程序计数区外所有的区都可能发生OOM
+- 产生原因：
+  （1）内存泄漏，当一个对象已经不需要被使用，本应该被GC机制进行回收，但是却有另一个正在使用的对象拥有它的引用，导致GC机制不能正常的进行回收。
+      从而造成这个对象异常的存活在内存中。这种情况一直堆积，会造成内存溢出。
+  （2）内存溢出：没有足够的内存来进行对象的空间分配。
+- 定位：LeakCanary工具进行跟踪和分析
+- 解决：针对内存泄露 和 内存溢出的解决
+  针对内存泄露：
+  （1）资源使用后未关闭   在关闭页面时及时关闭资源
+  （2）注册未取消        及时进行反注册
+  （3）单例模式造成      在单例模式中不要持有某个组件的context，可以用Application的context
+  （4）handler造成      message持有handler引用，handler持有Activity的引用。当页面退出，消息队列中有未处理的消息或者正在处理的消息时，会引发内存泄漏。
+      使用静态内handler内部类，对Activity进行弱引用持有。
+  （5）异步线程中持有当前组件的引用。当页面关闭后异步线程还未执行完毕。   对异步线程进行生命周期的绑定。
+  针对内存溢出：
+  （1）加载大图导致内存溢出 可以按照实际需求选择一定策略：1、压缩质量 2、大小缩放 3、按实际显示大小 4、分区域显示
+    - 1.对图片的引用可以使用弱引用，当内存不足时，GC机制回及时进行回收
+    - 2.使用BitmapFactory.decodeStream来设置大图，不要使用setImageBitmap。decodeStream直接调用JNI完成decode，其它方法调用Java层的createBitmap，相比之下decodeStream更节省内存。
+    - 3.在BitmapFactory.Option中设置option.inJustDecodeBounds，不会真实的申请图片所占内存就可以获取到图片的真是尺寸。然后根据实际显示View的大小对原图进行压缩和缩放操作。
+    - 4.只加载屏幕大小的图片，滑动显示，缩放显示
+
+10、Crash问题解决？
+APP运行中出现Crash后，会产生tombstone文件，存放在/data/tombstone中。
+- 产生原因：
+  （1）空指针
+  （2）角标越界
+  （3）遍历集合同时对集合进行移除操作
+  （4）子线程更新UI
+  等等
+- 定位：打开tombstone墓碑文件，查看对应信息
+  （1）abort message 从该记录中可以查看出大致什么原因导致的 EGL_BAD_ALLOC 内存申请异常  fault addr 0x10  指针地址异常
+  （2）backtrace 从该记录中查看出错时的指令地址，这个地址对应程序中某个函数的某行操作。使用addr2line命令可以输出程序代码中的具体位置。
+  （3）找到出错代码位置，对代码进行优化修复
+-  Thread.UncaughtExceptionHandler接口，当发生crash时会走uncaughtException方法，在该方法中可以获取到异常信息。
+
+11、其它问题数组越界？窗体泄露？空指针？
+
+-
+-
