--- a/reivew/4.0.algorithm.md
+++ b/reivew/4.0.algorithm.md
@@ -14,23 +14,20 @@
 
 todo 
 **1、解决问题相关 2、框架相关  3、性能优化相关  4、架构相关   5、基本算法or数据结构**
-todo 
-1.CAS的使用
-2.提前下载webView资源? 提前加载webView链接？
-3.为什么要使用到这些设计模式？
-4.LinkedList 和 LinkedQueue 对比？
 
-项目总结：
+#### 项目相关
     
-### 一、核心业务相关 （策略模式、代理模式、责任链模式）
+Q1:实际项目中遇到那些问题？是怎样解决的？
 1、充电业务：
 - 流程：扫码 -> 选枪 -> 支付 or 先充后付 -> 充电中（转场动画，显示充电相关数据） -> 充电结束 -> 支付 -> 统计
+- 描述：打开扫码界面，扫描充电桩上的二维码，选择充电枪，选择支付方式，确认充电，  
 - 问题：
-  （1）支付问题：存在很多中支付方式（先付后充、先充后付、微信支付分、三方支付），代码臃肿，维护难
-   解决：策略模式封装支付策略（支付模式的选择），代理模式封装支付方式（三方支付）
+  （1）支付问题：存在多种支付模式：先充后付，先付后充，微信支付分，选择支付模式后又有几种不同的之支付方式：三方支付、组合支付（钱包+其它）。
+    本身逻辑比较简单，但是由于需求的变更导致代码臃肿，可读性差，维护难。
+   解决：策略模式封装支付模式（支付模式的选择），用代理模式封装支付方式（三方支付）
   （2）充电中界面卡顿ANR：需要实时刷新数据，用的接口轮询的模式。但是在接口轮询过程中有其它操作，不断的创建了新的类新的对象。
    解决：通过Profile跟踪，发现Memory占用随着时间一步一步攀升。想到有接口轮询，立即排查代码。
-   有一个动画显示处理相关的类，在轮询中不断的创建，而且没有进行回收，导致内存吃紧。  
+   有一个动画处理类、数据转换类，在轮询中不断的创建，而且没有进行回收，导致内存吃紧。  
    心跳 or  轮询 
   
 2、导航业务：
@@ -42,13 +39,27 @@ todo
      - 解决：1.使用转场动画解决转场僵硬的问题（提前创建Fragment，在播放完转场动画后显示）
             2.对web加载进行优化（分析webView的加载流程 创建->连接->加载->显示）
             - 创建webView复用池，提前创建好webView放入池中，节省web创建时间    
-            - 提前下载webView资源？节省资源加载的时间
+            - 提前下载webView资源？节省资源加载的时间，
+              在shouldInterceptRequest方法中，替换导航需要用到的简单模型、导航指标、简单图片等资源，不必从url中下载。  
             - 提前加载webView链接？
 
     （2）语言播报问题：
      - 逻辑：基本播报逻辑是，室外时，导航语音由SDK自带播放，进入两公里范围后，会播报停车位状态（是否已经到达附近、是否被抢占等），
         室内时，从室内SDK获取文字，播报导航语音。
-     - 问题：1.解决语音播放冲突的问题，室外语音播报时，两种播报不能重叠；2.连续播放需要控制播放的间隔
+     - 问题：1.解决语音播放冲突的问题，室外语音播报时，两种播报不能重叠；2.连续播放需要控制播放的间隔；3.室内SDK频繁触发播发，过滤重复语音
      - 解决：设计一个语音播报的控制类VoiceController，主要实现播放、控制（开始播放、播放中、结束）、存储语音文字功能，
-        比较核心的是用到了ConcurrentLinkedQueue。
-        
+        比较核心的是用到了两个ConcurrentLinkedQueue，其中一个队列用于存放将要播报的两条文字，另一个队列存储SDK后续
+   
+Q2:谈谈你对架构的理解？
+首先从整体来说，可以把一个应用或者项目看成一个房子
+
+### 常用的框架和其原理
+todo 2022/10/31
+todo binder机制中 用户态 内核态
+
+### 常见设计模式
+todo 2022/10/31
+
+### 常见算法数据结构
+todo 2022/10/31
+
