--- a/reivew/2.1.Android performance.md
+++ b/reivew/2.1.Android performance.md
@@ -95,17 +95,30 @@
 APP运行中出现Crash后，会产生tombstone文件，存放在/data/tombstone中。
 - 产生原因：
   （1）空指针
-  （2）角标越界
+  （2）角标越界  数组越界？窗体泄露？空指针？
   （3）遍历集合同时对集合进行移除操作
   （4）子线程更新UI
   等等
-- 定位：打开tombstone墓碑文件，查看对应信息
-  （1）abort message 从该记录中可以查看出大致什么原因导致的 EGL_BAD_ALLOC 内存申请异常  fault addr 0x10  指针地址异常
-  （2）backtrace 从该记录中查看出错时的指令地址，这个地址对应程序中某个函数的某行操作。使用addr2line命令可以输出程序代码中的具体位置。
-  （3）找到出错代码位置，对代码进行优化修复
--  Thread.UncaughtExceptionHandler接口，当发生crash时会走uncaughtException方法，在该方法中可以获取到异常信息。
-
-11、其它问题数组越界？窗体泄露？空指针？
-
--
--
+- 解决
+   - 方式一：
+     Thread.UncaughtExceptionHandler接口，当发生crash时会走uncaughtException方法，在该方法中可以获取到异常信息。
+   - 方式二：
+     继承bug分析工具，如友盟等
+   - 方式三：
+    找到Crash日志，分析日志 [tombstone日志分析](https://blog.csdn.net/shulianghan/article/details/126404973)
+   如何找到tombstone文件？ 
+     （1）root手机导出
+      ·使用adb pull 如果提示权限不够 使用adb root
+      ·down下来整个文件  adb pull /data/anr/traces.text
+     （2）新版手机导出
+      ·使用adb report 命令生成zip文件
+      ·解压zip文件在FS/data目录下有anr和tombstone文件夹
+      ·查看对应的trace文件和tombstone文件
+   - tombstone文件分析：
+     （1）abort message 从该记录中可以查看出大致什么原因导致的 EGL_BAD_ALLOC 内存申请异常  fault addr 0x10  指针地址异常
+     （2）backtrace 从该记录中查看出错时的指令地址，这个地址对应程序中某个函数的某行操作。使用addr2line命令可以输出程序代码中的具体位置。
+     （3）找到出错代码位置，对代码进行优化修复
+   - arn文件分析 
+     （1）文件头部会记录 发生ANR的时间、进程等
+     （2）找到 DALVIK THREADS 这里可以查看到具体的回调地址，里面有具体的包、类、方法的调用
+         
