--- a/reivew/3.0.Kotlin basic.md
+++ b/reivew/3.0.Kotlin basic.md
@@ -24,7 +24,7 @@
 |---apply--|   this 或者 省略	  |       返回调用者对象         |
 
 3、扩展方法
-- 原理：
+- 原理：生成了一个静态方法，方法的参数是这个扩展对象
 
 
 
@@ -51,7 +51,8 @@
            HomeViewModel()
     }
 ```
-- 原理：by lazy 修饰后的变量会以Lazy 变量的形式暂存，Lazy变量的默认实现是SynchronizedLazyImpl类，
-  在此类中value值会通过synchronized()的方式进行初始化工作。
-  
+- 原理: by lazy 是一个重载函数，默认使用sync模式，还有public、none一共三种，对应三种不同Lazy实现类
+  （1）通过反编译查看java代码，by lazy变量会赋值给一个Lazy变量，通过Lazy变量的getValue获取值。
+  （2）Lazy是一个接口，其实现类是SynchronizedLazyImpl类，调用initializer进行变量初始化并赋值给value。
+  （3）SynchronizedLazyImpl使用同步锁（锁的对象是当前使用的类），SafePublicationLazyImpl使用CAS操作，UnsafeLazyImpl不保证多线程安全
 
