--- a/reivew/2.2.Android hot frame.md
+++ b/reivew/2.2.Android hot frame.md
@@ -17,8 +17,11 @@ Android Hot Frame
   （1）通过注解标记需要被注入的类，然后通过注解处理器为A类创建一个hilt_A的类，插入到A的继承关系中作为A类的父类。
   （2）在hilt_xx中的onCreate方法中提供变量初始化的入口，所有被注解的变量从这里开始一层一层的全部实例化。
   （3）组件的生命周期管理是通过ViewModel来实现
-- 使用中出现的问题？如何解决？
-
+- hilt 和 dagger对比？
+  （1）hilt使用减少了代码量
+  （2）hilt对于android中各大组件有对应的注解@HiltAndroidApp、@AndroidEntryPoint。但是Dagger对应每个组件都要告诉它如何进行注入，
+    需要创建对应的ActivityModule\FragmentModule。
+  
 ### 二、EventBus
 
 - 定义：基于观察者模式，是一款发布/订阅的事件总线框架
@@ -26,7 +29,7 @@ Android Hot Frame
   使用最多的场景：在一个Activity的接口中获取到返回内容，需要及时更新或者通知其它Activity时。内部使用了线程池、handler进行事件发送和线程切换，
     用broadcast、socket、contentProvider也可以达到目的。
   使用eventBus的优点：
-  （1）耦合度低，除开本身发生的事件外eventBus不依赖其它类。
+  （1）耦合度低，除开本身发生的事件外eventBus不依赖其它类，事件发布类和事件订阅类没有耦合关系。
   （2）简洁方便，事件的发生和接收区分开，发生事件非常灵活、接收事件简单方便。
   （3）效率高、体积小，可跨线程通信
   缺点：
@@ -39,8 +42,13 @@ Android Hot Frame
     核心原理：EventBus使用发布/订阅者模式，使用注解@Subscribe标记的订阅事件，使用post方法发送事件。register(this)方法会查找该类中，
       带@Subscrbie注解的方法，把event和订阅者存为一个hashMap，post方法调用后，根据入参event从hashMap中取出对应的订阅对象，调用订
       阅对象的订阅方法完成通信。
-  （1）调用register方法，查找出订阅方法存入List，调用subscribe将事件类型和订阅方法关联
-  （2）调用post方法，利用线程池和Handler，事件类型找到对应的订阅方法，通过handler进行分发。
+  （1）getDefault方法，内部使用了双重判空锁的单例模式来获取EventBus的实例。
+  （2）调用register方法，查找出订阅方法存入List，调用subscribe将事件类型和订阅方法关联放入hashMap中
+  （3）调用post方法，判断事件发生线程和订阅线程模式，选择不同方式进行发生，如果都在主线程中直接调用invoke，否则选择合适poster。
+- 如何进行跨线程通信？
+  （1）内部封装了Poster继承至Handler，利用handler进行线程之间的通信
+- 粘性事件：stickyEvent = ConcurrentHashMap()
+  （1）如何设置了粘性事件，就将事件存储在stickyEvent中，再通过遍历取出
 - 使用的优缺点？
 
 ### 三、ARouter
@@ -62,6 +70,10 @@ Android Hot Frame
   配置好路由后，跳转提示 router no find
   （1）根据router重新检查路由的配置（路由依赖、项目配置）
   （2）路径知否错了 有分组
+- 对外暴露接口：
+  （1）在需要对其他模块暴露的接口请求类中添加@route(path = "")注解，并实现IProvider
+  （2）在底层lib_common库中建立moduleService，用于获取不同模块的接口
+  （3）在需要使用接口的模块中直接调用ARouter获取对应路径的接口
   
 ### 四、RxJava
 
@@ -77,7 +89,7 @@ Android Hot Frame
   （3）指定消费消除，observeOn(AndroidSchedulers.mainThread())
   （4）订阅subScribe(observer)，通过内部的subScribeActual方法创建了发射器CreateEmitter，通过发射器将observable的事件发送到
         observer中去。
-- 线程切换原理：
+- 线程切换原理： Schedulers类中封装了多个调度器（Single、IO、Main、NewThread等），这些调度器内部又线程工厂、线程池
   （1）subscribeOn()
   （2）observeOn()
 - 使用的优缺点？
@@ -123,7 +135,7 @@ Android Hot Frame
   （4）功能多，能够添加多种适配器Adapter、拦截器Interceptor、数据转换器GsonConverter
 - 原理总结：
   （1）builder，利用builder模式对Retrofit进行配置，设置baseUrl、添加client(okhttp)、添加拦截器、添加CallAdapter、添加数据转换器
-  （2）create，传入注解标记的接口类。通过代理模式生成请求接口的代理类
+  （2）create，传入注解标记的接口类。通过动态代理模式生成请求接口的代理类
   （3）loadServiceMethod，通过解析注解找到对应的接口方法，存储在ConcurrentHashMap中。
 - 使用的优缺点？
 
@@ -138,7 +150,8 @@ Android Hot Frame
   （2）使用简单方便
 - 原理总结：
   1.无入侵启动原理
-      
+  （2）在组件的manifest.xml中注册了InitProvider
+  （1）AutoSize中的initProvider继承至ContentProvider，会在Application初始化后执行onCreate方法，在onCreate方法进行AutoSize的初始化工作    
   2.适配原理 （dp(屏幕实际像素) = px(分辨率) / density）
   px = dp  * (dpi / 160 )
   density = dpi/160
@@ -146,6 +159,7 @@ Android Hot Frame
   => dp = px/density
   通过修改density 值而达到每种分辨率手机的宽度dp值相同。
   当前设备屏幕总宽度（单位为像素）/ 设计图总宽度（单位为 dp) = density
+  
 - 使用的优缺点？
   **[AndroidAutoSize开源库屏幕适配分析](https://cloud.tencent.com/developer/article/2095598)**
   缺点：整个项目原生界面都进行了适配，但是项目中可能出现引用一些三方的View就会导致和原有的适配不一致的现象。
@@ -202,4 +216,6 @@ Android Hot Frame
   MMKV:（1）丢失数据（不支持数据备份和恢复）
   DataStore: 
 - MMKV -> 将数据写入内存(保存成hash表) -> 内存与磁盘空间的一块区域存在内存映射关系
+    
 
+### butterkinft 
