--- a/reivew/2.2.Android hot frame.md
+++ b/reivew/2.2.Android hot frame.md
@@ -192,13 +192,33 @@ Android Hot Frame
 
 - 使用的优缺点？
 
-### 八、Glide （和其它图片加载框架对比的优缺点？）LRU算法如何实现？
+### 八、Glide （Picasso和其它图片加载框架对比的优缺点？）LRU算法如何实现？
 
-- 定义：
+- 定义：图片加载框架.
 - 为啥要使用？
+  （1）Glide比Picasso加载图片要快，但是Glide比Picasso需要用更大空间来缓存图片
+  （2）Glide加载图片以及磁盘缓存方式都优于Picasso，且Glide更能有效的减少OOM
+  （3）Glide支持Gif动图，Picasso不支持
 - 原理总结：
-- 使用的优缺点？
-
+  （1）with 创建一个RequestManager后，创建一个透明无界面的Fragment来与组件生命周期进行绑定。
+  （2）load 嗲用RequestManager.load加载url，获取RequestBuilder对象绑定图片URl
+  （3）into 调用RequestBuilder.into
+- 对象池：  
+- 缓存机制： 内存缓存：活动缓存 和 Lur缓存  磁盘缓存： 原图缓存 和 变换后的图缓存
+  （1）运行时缓存（弱引用缓存） 作用：活动缓存保持当前View正在显示的图片
+   · 首先在运行时缓存中查找图片，如果有则直接进行显示，如果没有在 内存缓存中查找
+   · Map<key,ResourceWeakReference> activeEngineResource = new HashMap() 
+  （1）Lur缓存  作用：防止应用将重复的图片加载到内存
+   · 内存缓存中有，移动到活动缓存中，然后显示，如果没有在磁盘缓存中查找
+   · LinkedHashMap
+  （2）磁盘缓存  作用：防止应用重复的下载获取从其它地方重复读取图片
+    找到后移动到 活动缓存中然后显示，没有找到通过UrlHttpClient下载图片然后显示，同时保存在磁盘缓存中
+- Lru算法：
+  （1）利用LinkedHashMap实现，假设缓存容量设置为3，当新加入第4张图片时，会删除最进最不常使用的图片。当用get获取其中某一张时，
+    会重新进行排序，把这一张放在首位。利用的LinkedHashMap能够按照访问顺序排序的特点。
+- 为什么有活动缓存？
+  假设内存缓存为3，界面正显示3张图片，当put第4张图片时，LRU会把之前的一张删除掉，导致程序崩溃。而活动缓存没有LRU算法。
+  
 ### 九、SharedPreference\MMKV\DataStore
 - 
 - 原理：
@@ -218,4 +238,4 @@ Android Hot Frame
 - MMKV -> 将数据写入内存(保存成hash表) -> 内存与磁盘空间的一块区域存在内存映射关系
     
 
-### butterkinft 
+### 十、Butterknift 
