--- a/reivew/4.0.algorithm.md
+++ b/reivew/4.0.algorithm.md
@@ -53,15 +53,15 @@ Q1:实际项目中遇到那些问题？是怎样解决的？
 Q2:谈谈你对架构的理解？
 首先从整体来说，可以把一个应用或者项目看成一个房子
 
-### 常用的框架和其原理
-todo 2022/10/31
-todo binder机制中 用户态 内核态
 
 ### 常见设计模式
 todo 2022/10/31
 1、单例模式
 2、装饰模式
+todo binder机制中 用户态 内核态
 
 ### 常见算法数据结构
 todo 2022/10/31
 todo 序列化/反序列化
+todo SuspendRequestChain
+
