--- a/reivew/4.0.algorithm.md
+++ b/reivew/4.0.algorithm.md
@@ -57,11 +57,23 @@ Q2:谈谈你对架构的理解？
 ### 常见设计模式
 todo 2022/10/31
 1、单例模式
-2、装饰模式
-todo binder机制中 用户态 内核态
+2、装饰模式  对类扩展
+3、观察者模式
+4、责任链模式
+5、
+
 
 ### 常见算法数据结构
-todo 2022/10/31
-todo 序列化/反序列化
+1、冒泡排序  从上往下对比两个相邻的数据，较大的往下沉较小往上冒
+2、插入排序  假设前面n-1个数据已经排好序了，现在将第n个数插入前面的有序数列中，使得这个n个数也是排好序的。
+3、选择排序
+- 直接选择排序  从第一个开始，在后面的n-1中找到最小值与之替换（每次循环后，第一小的在第一个，第二小的在第二个.....）
+- 树形选择排序                                                                    
+- 堆排序
+4、快速排序    设置一个分水岭，一般是取一个随机元素（第一个），比这个元素大的放左边，比这个元素小的放右边，利用相同的方式排序两边的数组（递归）
+
+5、二分查找算法 (SparseArray稀疏数组)
+- 对一个有序数据，取一个中间值与查找值对比，如果中间值小于查找值，那么在右边继续分割查找，如果中间值大于查找值那么在左边查找
+
 todo SuspendRequestChain
 
