--- a/reivew/1.0.Java basic.md
+++ b/reivew/1.0.Java basic.md
@@ -315,7 +315,7 @@ retrofit是如何获取泛型擦除后的泛型类型的？
   （3）准备：在方法区中对类变量进行初始化（static）
   （4）解析：将常量池中的符号引用替换成直接引用
   （5）初始化：对类变量进行赋值及执行静态代码块
-- 生命周期： 加载、连接、初始化、使用、和卸载。  
+- 生命周期： 加载、连接、初始化、使用、卸载。  
   
 2、类加载器分类？什么是双亲委托？有什么好处？如何打破？
 - 分类：
@@ -336,7 +336,7 @@ retrofit是如何获取泛型擦除后的泛型类型的？
   
 3、对象的创建过程?对象如何分配内存？对象的内存模型？
 - 创建过程：
-  · 拿到创建指令：遇到new指令时，在方法区中的常量池中找到一个类的符号引用。
+  · 拿到创建指令：遇到new指令时，在方法区中的常量池中找到这个类的符号引用。
   · 检测符号引用：检查这个类是否被加载，如果没有加载类先去加载，否则直接分配内存。
   · 分配内存：在运行时数据区中的堆分配内存
   · 初始化：对对象头进行初始化，包括对象的元数据、GC代、哈希码
@@ -373,6 +373,7 @@ retrofit是如何获取泛型擦除后的泛型类型的？
   · 继承类
   · 实现接口
   · callable接口  call() 方法可以返回值和抛出异常
+- 线程状态：新建、就绪、运行、阻塞、死亡  
 - 线程控制：
   · start : 开启线程
   · sleep : 指定线程休眠，不会释放对象锁
@@ -421,10 +422,10 @@ retrofit是如何获取泛型擦除后的泛型类型的？
     （3）如果任务队列满了，此时还未达到最大线程数，则启动一个非核心线程去执行
     （4）如果达到了最大线程数，则拒绝执行，会调用RejectedExecutionHandler通知开发者。
 - 线程池分类：
-    （1）FixedThreadPool 固定线程数的线程池，最大线程数等于核心线程数  最大线程 ==  核心线程
-    （2）SingleThreadPool 单个线程的线程池                        最大线程 == 核心线程 == 1
-    （3）CachedThreadPool 无界线程池，会根据需要新建线程的线程池，核心线程为0 最大线程 = 1  核心线程= 0 
-    （4）ScheduledThreadPool  核心线程数固定，非核心线程没有限制的线程池 最大线程 == 最大  核心线程固定  非核心线程 无界
+    （1）FixedThreadPool      固定线程数的线程池，最大线程数等于核心线程数   最大线程 ==     核心线程
+    （2）SingleThreadPool     单个线程的线程池                           最大线程 ==     核心线程 == 1
+    （3）CachedThreadPool     无界线程池，会根据需要新建线程的线程池，       最大线程 = 1    核心线程为0  核心线程= 0 
+    （4）ScheduledThreadPool  核心线程数固定，非核心线程没有限制的线程池     最大线程 == 最大  核心线程固定  非核心线程 无界
 - 拒绝策略：
     （1）
 
@@ -441,6 +442,7 @@ retrofit是如何获取泛型擦除后的泛型类型的？
     · 用法上ReentrantLock需要结合try/finally 来进行lock和unlock的操作
     · 等待可中断
     · 公平锁
+    · 锁条件
 - 乐观锁和悲观锁：是两种不同的思想，用于解决并发场景下数据竞争问题。
     · 乐观锁：认为别人不会同时修改数据，不会上锁，在操作数据时会判断，如果有人修改了直接放弃操作。
         例如：CAS操作
@@ -450,7 +452,11 @@ retrofit是如何获取泛型擦除后的泛型类型的？
   （1）需要读写的内存位置V
   （2）进行比较的预期值A
   （3）拟写入的新值B
-
+- 死锁：
+    （1）发送资源抢夺
+    （2）循环申请对方资源
+    （3）循环等待对方资源
+    （4）互相不释放
   
 7、Atomic类的理解？
 
@@ -534,26 +540,30 @@ retrofit是如何获取泛型擦除后的泛型类型的？
   前两次握手是建立一个连接所必须的，第三次握手是为了避免无效的请求又传到服务器进而产生错误的情况。
 - 四次挥手？
   · 第一次 客户端发送FIN请求断开连接
-  · 第二次 服务端回复ACK
-  · 第三次 服务端回复FIN
-  · 第四次 客户端发送ACK
+  · 第二次 服务端回复ACK确认信息
+  · 第三次 服务端回复FIN断开连接
+  · 第四次 客户端发送ACK确认信息
 - 为啥要四次挥手？
   · 服务端回复ACK和FIN不是同步的，当客户端发送断开连接请求时，服务端可能还有数据没有发送完毕，当数据发送完毕后
   才会发送FIN报文，最后客户端发送ACK确认关闭连接。
 
 9、TCP的特点？UDP的特点？TCP和UDP区别？  UDP（User Datagram Protocol）
-- TCP特点：
+- TCP特点： TCP是一种面向连接的、可靠的、基于字节流运输的通信协议
   · 必须建立连接，形成传输数据的通道
   · 在连接中可以进行大量数据的传递
   · 经历三次握手时可靠协议
   · 必须建立连接效率低
-- UDP特点：
+- UDP特点：UDP是一种面向无连接
   · 面向无连接
   · 每个数据报文大小限制在64k以内
   · 不可靠协议                            
   · 速度快、效率高
 - Http请求是TCP，DatagramSocket是UDP
-  
+- 面向连接？面向无连接？
+  区别：
+  （1）面向连接，分为三个阶段，建立连接-》传输数据-》释放连接。  数据保序性，大量数据，可靠协议，速度慢，效率低
+  （2）面向无连接，直接开始传输数据                         无法保证数据顺序，每次发送的数据有大小限制，不可靠，速度快，效率高
+     
 10、Cookie、Session、Token之间的区别？作用是啥？
 - Cookie :是存储在浏览器目录中的文本文件，存储一些少量的用户信息。
 - Session:是客户端和服务端建立连接时添加的标志，最后会转化成一个Cookie发送给客户端。对HTTP请求进行持久化的存储，使得多次请求有相同的标识。
