--- a/reivew/2.0.Android basic.md
+++ b/reivew/2.0.Android basic.md
@@ -74,8 +74,6 @@ https://blog.csdn.net/hello_1995/article/details/120075342
         会被放入此队列中，可通过queue.poll()方法获取改弱引用对象。
     · InternalAppWatcher：
   
-5、ANR日志分析？
-  
 6、SharedPreferences的工作原理?读写存在的问题?造成ANR的原因？如何优化？进程同步？
 - 原理:
     （1）加载文件：SharedPreferences是一个接口，其实现类是SharedPreferencesImpl。在此类中会开启子线程，调用loadFromDisk加载xml
@@ -103,37 +101,11 @@ https://blog.csdn.net/hello_1995/article/details/120075342
   （4）使用DateStore替换
 - 进程同步：
     
-
-7、Jetpack相关的ViewModel、DataBinding、LiveData、Flow、Lifecycle？
-- ViewModel
-
-8、ActivityThread类
-
-9、IPC通信机制
-
-10、文件编译、转换阶段和过程、插件的编译原理
-
-11、注解处理器的工作原理？
-
 12、IntentFilter匹配规则，action和category区别？                  
-
-13、ContentProvider原理
-
-14、TouchEvent传递过程？ onTouchEvent返回false怎么办?
-
-15、磁盘内存映射原理
-
-16、handler机制相关 looper  阻塞线程？
-
-17、activity 启动过程  activity创建过程   activity启动到加载view的过程
-
-18、view绘制过程
-
+- 规则：一个intent只有一个intentFilter，但是一个intentFilter中可以包含多个action，只要有一个action匹配成功就可以。
+category对action进行一个附加的说明作用
+  
 19、RecyclerView相关
-
-20、ANR相关  OOM相关
-
-21、图片加载、压缩、缓存
 
 22、MCV\MVP\MVVM
 
@@ -159,7 +131,9 @@ void checkThread(){
      子线程中创建一个looper，再调用windowManager重写一个类似addView方法用于加载view
   2. SurfaceView  
      SurfaceView内部有一个holder
-     
+- surfaceView原理？
+  surfaceView与宿主窗体是分离的，能够脱离当前Activity自己与WMS通信，所有能够在子线程中渲染view
+  
 24、Android窗口机制？Activity加载布局的流程？PhoneWindow？DecorView？ViewRootImpl？Activity如何加载？
 [Android UI加载流程](https://blog.csdn.net/YoungOne2333/article/details/125211613)
 - Activity加载布局的流程   基本流程：Activity -> PhoneWindow -> DecorView -> layoutInflater
@@ -289,3 +263,8 @@ ANR:应用无响应  Activity 5s BroadCastReceiver 10  service 20
                 2.发生anr的方法
                 3.查看对应的方法，检查代码逻辑
     
+31. 如何进行请求加密？
+（1）自定义拦截器，重写rebuildRequest方法
+ （2）在rebuildRequest方法中设置header,获取请求参数
+ （3）将请求参数按照一定规则生成一个字符串，通过md5算法生成一个字符串，再通过hmac算法生成一个byte数组，再将数组生成十六进制的字符串。
+  （4）前后端用统一的密钥。  
