--- a/reivew/1.0.Java basic.md
+++ b/reivew/1.0.Java basic.md
@@ -580,5 +580,10 @@ retrofit是如何获取泛型擦除后的泛型类型的？
   | 3 网络层 		| 为数据包选择路由      				| IP，ICMP，OSPF，EIGRP，IGMP					|
   | 2 数据链路层 	    | 传输有地址的帧以及错误检测功能      	| SLIP，CSLIP，PPP，MTU							|
   | 1 物理层 		| 以二进制数据形式在物理媒体上传输数据  	| ISO2110，IEEE802，IEEE802.2					|
-
+  (1)、应用层：如Http协议，它实际定义了如何包装和解析数据，应用层采用HTTP协议后，会按照协议包装数据，如按照请求行、请求头、请求体包装。
+  包装好后将数据传输至运输层。
+  (2)、运输层：这一层指定了将数据以何种方式传送到端口号。涉及到如何建立连接？如何保证数据不丢失？如何调节流量控制和拥塞控制？等。
+  (3)、网络层：这一层指定了将数据传送到那个IP地址。涉及到最优路线，路由选择算法等。
+  (4)、数据链路层：如ARP协议，负责把IP地址解析成对应的MAC地址，即硬件地址，这样就能找到对应的唯一机器。
+  (5)、物理层：提供二进制传输服务，也就是真正开始通过传输介质（有线、无线）开始进行数据的传输了。
  
