--- a/reivew/3.0.Kotlin basic.md
+++ b/reivew/3.0.Kotlin basic.md
@@ -56,3 +56,8 @@
   （2）Lazy是一个接口，其实现类是SynchronizedLazyImpl类，调用initializer进行变量初始化并赋值给value。
   （3）SynchronizedLazyImpl使用同步锁（锁的对象是当前使用的类），SafePublicationLazyImpl使用CAS操作，UnsafeLazyImpl不保证多线程安全
 
+6、lambda表达式
+- 定义：
+- 本质：是一种匿名函数
+
+7、compent伴生对象
