--- a/reivew/3.1.Kotlin advance.md
+++ b/reivew/3.1.Kotlin advance.md
@@ -82,7 +82,7 @@
 - 定义：
 - 原理：  
 - 如何存储？
-  viewModelStore
+  viewModelStore将viewModel通过hashMap存储起来
   
 4、DataBing
 - 数据绑定。再xml布局用layout标签包裹，声明<data>标签，里面定义需要绑定的数据，然后就可以直接在xml值使用了。
@@ -93,7 +93,7 @@
 5、Lifecycle原理
 - 定义：lifecycle是一个类，用于存储有关组件（Activity\Fragment）的生命周期状态信息，并且允许其它对象观察此状态。
   （有关组件可以看成一个被观察者，通过lifecycle向其他组件发生生命周期变化的状态）
-- 原理：
+- 原理：Activity父类实现了lifecycleOwner接口，通过getLifecycle方法返回
   （1）lifecycleOwner   生命周期拥有者（Activity等可以看成是被观察者）
   （2）lifecycleObserver  观察者（开发者自定义的处理事件的逻辑，重写生命周期方法）
   （3）lifecycle        lifecycle注入一个无页面的fragment，这个fragment的生命周期与组件关联的，组件生命周期触发后，lifecycle通过反射的方式将生命
