--- a/reivew/4.0.algorithm.md
+++ b/reivew/4.0.algorithm.md
@@ -56,10 +56,10 @@ Q2:谈谈你对架构的理解？
 
 ### 常见设计模式
 todo 2022/10/31
-1、单例模式
-2、装饰模式  对类扩展
+1、单例模式    全局唯一实例
+2、装饰模式    对类扩展
 3、观察者模式
-4、责任链模式
+4、责任链模式  发送者和接收者解耦
 5、
 
 
@@ -74,6 +74,7 @@ todo 2022/10/31
 
 5、二分查找算法 (SparseArray稀疏数组)
 - 对一个有序数据，取一个中间值与查找值对比，如果中间值小于查找值，那么在右边继续分割查找，如果中间值大于查找值那么在左边查找
+   
+- 两数之和
 
-todo SuspendRequestChain
 
